--- a/homework/travel-bucket-list/css/styles.css
+++ b/homework/travel-bucket-list/css/styles.css
@@ -1,8 +1,13 @@
+body {
+	margin: 0;
+	font-family: 'Dosis', sans-serif;
+}
+
 .container {
 	width: 960px;
 	margin: 0 auto;
 	background: rgb(243, 243, 243);
-	font-family: 'Dosis', sans-serif;
+	
 }
 
 h1 {
