--- a/class-work/flexbox-startup-matchmaker/css/main.css
+++ b/class-work/flexbox-startup-matchmaker/css/main.css
@@ -146,6 +146,9 @@ p {
 	/*width: 27.3333%;*/
 	padding: 2% 3%;
 	box-shadow: inset -1px 0 0 rgba(0,0,0,.15);
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
 }
 
 .tout:last-child {
