--- a/final-project/css/styles.css
+++ b/final-project/css/styles.css
@@ -252,7 +252,7 @@ h3 p {
 
 .mappic {
    font-family: 'Oswald', sans-serif;
-   background-image: url("../img/travel1.jpg");
+   background-image: url("../img/banner.jpg");
    color: white;
    font-size: 20px;
    opacity: 0.9;
@@ -263,14 +263,39 @@ h3 p {
    background-position: center center; 
    text-shadow: -1px 0 #8c8c8c, 0 1px #8c8c8c, 1px 0 #8c8c8c, 0 -1px #8C8C90;
    opacity: 0.7;
+   height: 250px;
+}
+
+
+.mappic h1 {
+   text-align: center;
+   padding-top: 100px;
+   padding-bottom: 100px;
+   margin: 0px;
 }
 
 #map {
-   width: 700px; height: 450px; 
+   width: 960px; 
+   height: 550px; 
+   margin: auto;
+   padding-top: 30px;
 }
 
+#intro {
+      padding: 64px;
+      background-color: #ffffff;
+      border-radius: 4px;
+      text-align: center;
+   }
 
-
+.button {
+      border: 1px solid #666666;
+      padding: 10px 26px;
+      border-radius: 6px;
+      text-decoration: none;
+      color: black;
+      margin-bottom: 700px;
+}
 
 
 
