--- a/final-project/css/styles.css
+++ b/final-project/css/styles.css
@@ -226,7 +226,7 @@ footer {
 }
 
 
-.springsub {
+/*.springsub {
    font-family: 'Oswald', sans-serif;
    background-image: url("../img/coldspring2.jpg");
    color: white;
@@ -238,7 +238,7 @@ footer {
    background-repeat: no-repeat;
    background-position: center center; 
    text-shadow: -1px 0 #8c8c8c, 0 1px #8c8c8c, 1px 0 #8c8c8c, 0 -1px #8C8C90;
-}
+}*/
 
 p {
    font-family: 'Source Sans Pro', sans-serif;
@@ -303,5 +303,102 @@ h3 p {
     color: #666666;
 }
 
+img{
+   height: 500px;
+   width: 700px;
+   padding-left: 130px;
+   padding-top: 20px;
+   opacity: .85;
+}
 
 
+/*SLIDESHOW*/
+* {box-sizing:border-box}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+.mySlides {
+    display: none;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor:pointer;
+  height: 13px;
+  width: 13px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+
+.picture {
+   max-width: 960px;
+   padding: 0px;
+   max-height: 270px;
+   object-fit: cover;
+}
+
+.text {
+   padding: 100px 12px;
+   font-family: 'Oswald', sans-serif;
+   text-shadow: -1px 0 #282828, 0 1px #282828, 1px 0 #282828, 0 -1px #282828;
+   font-size: 50px;
+}
