--- a/final-project/css/styles.css
+++ b/final-project/css/styles.css
@@ -49,7 +49,7 @@ nav a {
 
 .one {
 	font-family: 'Oswald', sans-serif;
-	background-image: url("https://cdn.pixabay.com/photo/2016/02/19/10/41/travel-1209355_960_720.jpg");
+	background-image: url("../img/homepage.jpg");
 	color: white;
 	font-size: 20px;
 	opacity: 0.9;
